<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Shopping List</string>
  <string name="title_add_purchase">Add purchase</string>
  <string name="title_add_purchase_type">Add Purchase type</string>
  <string name="buy_list_header">Large Text</string>
  <string name="buy_list_heading">Buy List Heading</string>
  <string name="hello_msg">Hello World, MyActivity</string>
  <string name="empty_list_msg">List is empty</string>
  <string name="add_btn_text">Add</string>
  <string name="purchase_name">Name</string>
  <string name="purchase_quantity">Quantity</string>
  <string name="purchase_name_hint">Name</string>
  <string name="purchase_quantity_hint">Count</string>
  <string name="add_purchase_submit_btn">Add</string>
  <string name="msg_purchase_added">Purchase added</string>
  <!--Settings-->
  <string name="settings_address">Shops</string>
  <string name="settings_types_config">Purchase types</string>
  <!--Error messages-->
  <string name="err_purchase_name_empty">Enter purchase name</string>
  <string name="err_purchase_quantity_empty">Enter quantity</string>
  <string name="err_purchase_quantity_nan">Not a number</string>
  <string name="err_purchase_type_empty">Enter type name</string>
  <string name="add_type_btn">Add</string>
  <string name="add_type_name_hint">Type Name</string>
  <string name="title_types_list">Purchase types</string>
  <string name="btn_add_shop">Add shop</string>
  <string name="stop_gps_check">Stop GPS</string>
  <string name="title_add_shop">Add shop</string>
  <string name="title_shop_list">Shop list</string>


  <string name="notification_text">You have purchases</string>
  <string name="sort_finish">OK</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_add_shop_coords">With coords</string>
  <string name="btn_add_shop_addr">With address</string>
  <string name="add_shop_latitude">latitude</string>
  <string name="add_shop_longitude">longitude</string>
  <string name="add_shop_description">description</string>
  <string name="default_forget_time">20</string>
  <string name="default_notify_distance">300</string>
  <string name="default_check_frequency">5</string>
  <string name="add_shop_address">Enter address</string>
  <!-- preferences -->
  <string name="pref_gps_settings">GPS settings</string>
  <string name="pref_gps_enabled">Enable GPS tracking</string>
  <string name="pref_check_frequency">Checking frequency</string>
  <string name="pref_forget_time">Notification timeout</string>
  <string name="pref_notify_distance">Distance to notify</string>
  <string name="pref_detail_gps_status">GPS is %s</string>
  <string name="pref_value_gps_on">on</string>
  <string name="pref_value_gps_off">off</string>
  <string name="pref_value_frequency">Your location is updated every %s minutes</string>
  <string name="pref_value_forget_time">You will not be notified during %s minutes after last notification</string>
  <string name="pref_value_react_distance">You will be notified when you are in %s meters after nearest shop</string>
  <string name="menu_add_shop_on_map">On map</string>
  <string name="pref_key_notify_distance">pref_notify_distance</string>
  <string name="shop_desc_hint">Enter shop description</string>
  <string name="shop_desc_save">Save</string>
	<string name="error_empty_description">Enter description</string>
</resources>
