<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:a="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
    a:key="pref_group_gps"
    a:title="@string/pref_gps_settings">
    <SwitchPreference
      a:defaultValue="true"
      a:key="pref_gps_on"
      a:title="@string/pref_gps_enabled" />
    <EditTextPreference
      a:defaultValue="@string/default_check_frequency"
      a:dependency="pref_gps_on"
      a:inputType="number"
      a:key="pref_check_frequency"
      a:maxLength="3"
      a:numeric="integer"
      a:title="@string/pref_check_frequency" />
    <EditTextPreference
      a:defaultValue="@string/default_forget_time"
      a:dependency="pref_gps_on"
      a:inputType="number"
      a:key="pref_forget_time"
      a:maxLength="3"
      a:numeric="integer"
      a:title="@string/pref_forget_time" />
    <EditTextPreference
      a:defaultValue="@string/default_notify_distance"
      a:dependency="pref_gps_on"
      a:inputType="number"
      a:key="pref_notify_distance"
      a:maxLength="5"
      a:numeric="integer"
      a:title="@string/pref_notify_distance" />
  </PreferenceCategory>
</PreferenceScreen>
