<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
  tools:context=".activity.AddPurchaseActivity">

	<EditText
		android:id="@+id/name"
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:hint="@string/purchase_name_hint"
		android:maxLength="30"
		android:maxLines="0"
		android:onClick="clearEdits"
		android:singleLine="true" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="40dp"
		android:layout_gravity="bottom"
		android:gravity="bottom|right"
		android:orientation="horizontal">

		<EditText
			android:id="@+id/quantity"
			android:layout_width="0dp"
			android:layout_height="40dp"
			android:layout_gravity="bottom|right"
			android:layout_weight="1"
			android:ems="10"
			android:hint="@string/purchase_quantity_hint"
			android:inputType="number"
			android:maxLength="5"
			android:maxLines="1"
			android:minHeight="20dp"
			android:singleLine="true" />

		<Spinner
			android:id="@+id/typeList"
			android:layout_width="100dp"
			android:layout_height="40dp"
			android:layout_gravity="bottom"
			android:minHeight="20dp" />
	</LinearLayout>

	<Button
		android:id="@+id/addBtn"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|right"
		android:layout_marginTop="10dp"
		android:onClick="addPurchase"
		android:text="@string/add_purchase_submit_btn" />
</LinearLayout>
